<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_app_bar"
        style="@style/AppBar">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/AppBarButton"
            android:layout_alignParentStart="true"
            android:text="@string/cancel" />

        <TextView
            style="@style/AppBarTitle"
            android:text="@string/add_vehicle" />

        <Button
            android:id="@+id/btn_action"
            style="@style/AppBarButton"
            android:layout_alignParentEnd="true"
            android:text="@string/save" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_first_vehicle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/create_first_vehicle_text"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_vehicle_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicle_title"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_vehicle_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/license_plate_number"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:textAllCaps="true" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/rl_select_state"
            style="@style/ArrowLayout"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_state_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/state"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_large" />

            <TextView
                android:id="@+id/tv_state_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:drawablePadding="10dp"
                android:text="@string/select"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/txt_large" />

        </RelativeLayout>

        <Switch
            android:id="@+id/sw_is_vehicle_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:checked="true"
            android:text="@string/set_as_default"
            android:textSize="@dimen/txt_large" />

        <TextView
            android:id="@+id/tv_first_default_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/first_default_vehicle_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_order_modify_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/vehicle_modify_text"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_delete"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/remove_this_vehicle"
        android:textAllCaps="false"
        android:textColor="@color/color_red"
        android:visibility="gone" />

</LinearLayout>
