<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cruxlab.parkurbn.fragments.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_app_bar"
            style="@style/AppBar">

            <ImageButton style="@style/AppBarBackButton" />

            <TextView
                style="@style/AppBarTitle"
                android:text="@string/remind_password" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/receive_reset_password_link_text"
            android:textSize="@dimen/txt_large" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_email"
            style="@style/AppTextInputLayout">

            <EditText
                style="@style/AppEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/AppButton"
            android:layout_margin="16sp"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>