<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cruxlab.parkurbn.fragments.TutorialFirstFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/disabled_spots"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_large"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/demo_tutorial_spots"
        android:textSize="@dimen/txt_large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/demo_tutorial_sample"
        android:textSize="@dimen/txt_large" />

    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginStart="10dp"
        android:elevation="0dp"
        android:text="@string/show_disabled_spots"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_medium"
        android:textStyle="bold"/>

</LinearLayout>