<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout style="@style/AppBar">

        <ImageButton style="@style/AppBarBackButton" />

        <TextView
            style="@style/AppBarTitle"
            android:text="@string/vehicles" />

        <Button
            android:id="@+id/btn_action"
            style="@style/AppBarButton"
            android:layout_alignParentEnd="true"
            android:text="@string/edit"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_vehicles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_vehicle_list_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/current_vehicles"
            android:textAllCaps="true" />

        <ListView
            android:id="@+id/lv_vehicles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_no_vehicles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/ic_vehicle_car" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:text="@string/no_vehicles_text" />

        <Button
            android:id="@+id/btn_add"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/add_vehicle" />

    </LinearLayout>

</LinearLayout>
