<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_app_bar"
        style="@style/AppBar">

        <ImageButton style="@style/AppBarBackButton" />

        <TextView
            style="@style/AppBarTitle"
            android:text="@string/feedback" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/where_would_you_like_to_see_urbn_next"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_neighborhood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/neighborhood"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rl_select_state"
                style="@style/ArrowLayout"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_state_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/state"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/txt_large" />

                <TextView
                    android:id="@+id/tv_state_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawablePadding="10dp"
                    android:text="@string/select"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="@dimen/txt_large" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/rate_this_app"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srb_borderColor="@color/color_orange"
                app:srb_fillColor="@color/color_orange"
                app:srb_numberOfStars="5"
                app:srb_starSize="40dp"
                app:srb_stepSize="1" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp">

                <EditText
                    android:id="@+id/et_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/we_want_to_hear_from_you"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:scrollbars="vertical" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                style="@style/LoginButton"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
